--- a/rackshift-server/src/main/resources/application.properties
+++ b/rackshift-server/src/main/resources/application.properties
@@ -35,3 +35,5 @@ spring.messages.basename=i18n/messages
 spring.datasource.url=jdbc:mysql://localhost:3306/rackshift?autoReconnect=false&useUnicode=true&characterEncoding=UTF-8&characterSetResults=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false&serverTimezone=GMT%2B8
 spring.datasource.username=root
 spring.datasource.password=admin
+
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
