--- a/rackshift-web/package.json
+++ b/rackshift-web/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "element-ui": "^2.13.2",
     "vue": "^2.6.11",
+    "vue-i18n": "^8.18.2",
     "vue-router": "^3.3.4"
   },
   "devDependencies": {
