--- a/rackshift-server/pom.xml
+++ b/rackshift-server/pom.xml
@@ -71,6 +71,12 @@
             <artifactId>spring-boot-starter-websocket</artifactId>
         </dependency>
         <!-- flyway -->
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
@@ -78,7 +84,6 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>com.github.pagehelper</groupId>
@@ -188,6 +193,34 @@
                         <version>1.3.8</version>
                     </dependency>
                 </dependencies>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>main-class-placement</id>
+                        <phase>generate-resources</phase>
+                        <configuration>
+                            <target>
+                                <move todir="src/main/resources/static">
+                                    <fileset dir="../rackshift-web/dist">
+                                        <exclude name="*.html"/>
+                                    </fileset>
+                                </move>
+                                <move todir="src/main/resources/static">
+                                    <fileset dir="../rackshift-web/dist">
+                                        <include name="*.html"/>
+                                    </fileset>
+                                </move>
+                            </target>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
