--- a/rackshift-server/src/main/resources/application.properties
+++ b/rackshift-server/src/main/resources/application.properties
@@ -30,7 +30,8 @@ spring.flyway.table=rackshift_version
 spring.flyway.baseline-version=0
 spring.flyway.encoding=UTF-8
 spring.flyway.validate-on-migrate=false
-spring.messages.basename=i18n/messages
+spring.messages.encoding=UTF-8
+spring.messages.basename=i18n/message
 
 spring.datasource.url=jdbc:mysql://localhost:3306/rackshift?autoReconnect=false&useUnicode=true&characterEncoding=UTF-8&characterSetResults=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false&serverTimezone=GMT%2B8
 spring.datasource.username=root
