--- a/rackshift-server/src/main/resources/application.properties
+++ b/rackshift-server/src/main/resources/application.properties
@@ -32,9 +32,9 @@ spring.flyway.encoding=UTF-8
 spring.flyway.validate-on-migrate=false
 spring.messages.encoding=UTF-8
 spring.messages.basename=i18n/message
-
 spring.datasource.url=jdbc:mysql://localhost:3306/rackshift?autoReconnect=false&useUnicode=true&characterEncoding=UTF-8&characterSetResults=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false&serverTimezone=GMT%2B8
 spring.datasource.username=root
 spring.datasource.password=admin
-
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+spring.servlet.multipart.max-file-size=10240MB
+spring.servlet.multipart.max-request-size=20480MB
