--- a/rackshift-server/pom.xml
+++ b/rackshift-server/pom.xml
@@ -25,6 +25,17 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-tomcat</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-undertow</artifactId>
         </dependency>
 
         <dependency>
@@ -205,33 +216,33 @@
                 </dependencies>
             </plugin>
 
-<!--            <plugin>-->
-<!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-antrun-plugin</artifactId>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <id>main-class-placement</id>-->
-<!--                        <phase>generate-resources</phase>-->
-<!--                        <configuration>-->
-<!--                            <target>-->
-<!--                                <move todir="src/main/resources/static">-->
-<!--                                    <fileset dir="../rackshift-web/dist">-->
-<!--                                        <exclude name="*.html"/>-->
-<!--                                    </fileset>-->
-<!--                                </move>-->
-<!--                                <move todir="src/main/resources/static">-->
-<!--                                    <fileset dir="../rackshift-web/dist">-->
-<!--                                        <include name="*.html"/>-->
-<!--                                    </fileset>-->
-<!--                                </move>-->
-<!--                            </target>-->
-<!--                        </configuration>-->
-<!--                        <goals>-->
-<!--                            <goal>run</goal>-->
-<!--                        </goals>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--            </plugin>-->
+            <!--            <plugin>-->
+            <!--                <groupId>org.apache.maven.plugins</groupId>-->
+            <!--                <artifactId>maven-antrun-plugin</artifactId>-->
+            <!--                <executions>-->
+            <!--                    <execution>-->
+            <!--                        <id>main-class-placement</id>-->
+            <!--                        <phase>generate-resources</phase>-->
+            <!--                        <configuration>-->
+            <!--                            <target>-->
+            <!--                                <move todir="src/main/resources/static">-->
+            <!--                                    <fileset dir="../rackshift-web/dist">-->
+            <!--                                        <exclude name="*.html"/>-->
+            <!--                                    </fileset>-->
+            <!--                                </move>-->
+            <!--                                <move todir="src/main/resources/static">-->
+            <!--                                    <fileset dir="../rackshift-web/dist">-->
+            <!--                                        <include name="*.html"/>-->
+            <!--                                    </fileset>-->
+            <!--                                </move>-->
+            <!--                            </target>-->
+            <!--                        </configuration>-->
+            <!--                        <goals>-->
+            <!--                            <goal>run</goal>-->
+            <!--                        </goals>-->
+            <!--                    </execution>-->
+            <!--                </executions>-->
+            <!--            </plugin>-->
         </plugins>
     </build>
 </project>
