--- a/rackshift-web/package.json
+++ b/rackshift-web/package.json
@@ -11,6 +11,9 @@
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "element-ui": "^2.13.2",
+    "sockjs": "^0.3.21",
+    "sockjs-client": "^1.5.0",
+    "stompjs": "^2.3.3",
     "vue": "^2.6.11",
     "vue-i18n": "^8.18.2",
     "vue-router": "^3.3.4"
