1.国际化调整 2.proxy 接口鉴权 3.proxy dockerfile

--- a/rackshift-proxy/pom.xml
+++ b/rackshift-proxy/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>io.rackshift</groupId>
     <artifactId>rackshift-proxy</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>rackshift-proxy</name>
     <description>RackShift-Proxy</description>
 
