--- a/rackshift-server/pom.xml
+++ b/rackshift-server/pom.xml
@@ -168,6 +168,12 @@
             <artifactId>commons-fileupload</artifactId>
             <version>1.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.4.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
