远程调试flyway问题

--- a/rackshift-server/Dockerfile
+++ b/rackshift-server/Dockerfile
@@ -6,6 +6,6 @@ ADD ./target/rackshift-server-1.0.0.jar /opt
 
 VOLUME /opt/rackshift
 
-EXPOSE 5005
+EXPOSE "5005"
 
 CMD ["java", "-jar", "-Xdebug -Xrunjdwp:transport=dt_socket,address=5005,server=y,suspend=y", "/opt/rackshift-server-1.0.0.jar"]
