--- a/rackshift-server/Dockerfile
+++ b/rackshift-server/Dockerfile
@@ -4,12 +4,8 @@ RUN mkdir -p /opt/rackshift
 
 ADD ./target/rackshift-server-1.0.0.jar /opt
 
-ADD entrypoint.sh /
-
-RUN chmod +x /entrypoint.sh
-
 VOLUME /opt/rackshift
 
 EXPOSE 5005
 
-ENTRYPOINT ["/entrypoint.sh"]
+CMD java -jar -Xdebug -Xrunjdwp:transport=dt_socket,address=5005,server=y,suspend=y /opt/rackshift-server-1.0.0.jar
