--- a/rackshift-server/Dockerfile
+++ b/rackshift-server/Dockerfile
@@ -8,4 +8,4 @@ VOLUME /opt/rackshift
 
 EXPOSE 5005
 
-CMD java -jar -Xdebug -Xrunjdwp:transport=dt_socket,address=5005,server=y,suspend=y /opt/rackshift-server-1.0.0.jar
+CMD java -jar -Xdebug -Xrunjdwp:transport=dt_socket,address=5005,server=y,suspend=n /opt/rackshift-server-1.0.0.jar
