--- a/rackshift-proxy/Dockerfile
+++ b/rackshift-proxy/Dockerfile
@@ -6,4 +6,4 @@ ADD ./target/rackshift-proxy-1.0.0.jar /opt
 
 VOLUME /opt/rackshift
 
-CMD ["java", "-jar", "/opt/rackshift-proxy-1.0.0.jar"]
+CMD java -jar -Xdebug -Xrunjdwp:transport=dt_socket,address=5004,server=y,suspend=n /opt/rackshift-proxy-1.0.0.jar
