--- a/rackshift-proxy/pom.xml
+++ b/rackshift-proxy/pom.xml
@@ -87,6 +87,12 @@
             <version>1.0.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.docker-java</groupId>
+            <artifactId>docker-java</artifactId>
+            <!-- use latest version https://github.com/docker-java/docker-java/releases -->
+            <version>3.2.0</version>
+        </dependency>
     </dependencies>
 
     <build>
