commons-fileupload 尝试解决大文件上传OOM

--- a/rackshift-server/src/main/resources/application.properties
+++ b/rackshift-server/src/main/resources/application.properties
@@ -33,5 +33,7 @@ spring.flyway.validate-on-migrate=false
 spring.messages.encoding=UTF-8
 spring.messages.basename=i18n/message
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+# upload
+spring.servlet.multipart.enabled=false
 spring.servlet.multipart.max-file-size=10240MB
 spring.servlet.multipart.max-request-size=20480MB
