测试挂载宿主机mount命令

--- a/rackshift-server/Dockerfile
+++ b/rackshift-server/Dockerfile
@@ -4,6 +4,8 @@ RUN mkdir -p /opt/rackshift
 
 ADD ./target/rackshift-server-1.0.0.jar /opt
 
+RUN mkdir -p /bin/mount
+
 VOLUME /opt/rackshift
 
 EXPOSE 5005
