测试挂载宿主机mount命令

--- a/rackshift-server/Dockerfile
+++ b/rackshift-server/Dockerfile
@@ -4,7 +4,7 @@ RUN mkdir -p /opt/rackshift
 
 ADD ./target/rackshift-server-1.0.0.jar /opt
 
-RUN mkdir -p /bin/mount
+RUN rm -rf /bin/mount
 
 VOLUME /opt/rackshift
 
