--- a/rackshift-plugin/dell-metal-plugin/pom.xml
+++ b/rackshift-plugin/dell-metal-plugin/pom.xml
@@ -9,6 +9,7 @@
 
     <properties>
         <spring.version>3.1.3.RELEASE</spring.version>
+        <rackshift.version>1.0.0</rackshift.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
