--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ target
 /rackshift-plugin/dell-metal-plugin/dell-metal-plugin.iml
 /rackshift-plugin/metal-plugin-sdk/metal-plugin-sdk.iml
 /rackshift-plugin/rackshift-plugin.iml
+/rackshift-plugin/inspur-metal-plugin/inspur-metal-plugin.iml
+/rackshift-web/public/rackshift-web.lnk
