--- a/rackshift-plugin/metal-plugin-sdk/pom.xml
+++ b/rackshift-plugin/metal-plugin-sdk/pom.xml
@@ -16,7 +16,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.8.1</version>
+            <version>4.13.1</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -35,9 +35,9 @@
             <version>1.7.2</version>
         </dependency>
         <dependency>
-            <groupId>dom4j</groupId>
+            <groupId>org.dom4j</groupId>
             <artifactId>dom4j</artifactId>
-            <version>1.6.1</version>
+            <version>2.1.3</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
