--- a/rackshift-plugin/pom.xml
+++ b/rackshift-plugin/pom.xml
@@ -19,6 +19,7 @@
         <module>metal-plugin-sdk</module>
         <module>dell-metal-plugin</module>
         <module>inspur-metal-plugin</module>
+        <module>hp-metal-plugin</module>
     </modules>
 
 </project>
