--- a/rackshift-plugin/hp-metal-plugin/pom.xml
+++ b/rackshift-plugin/hp-metal-plugin/pom.xml
@@ -4,11 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.rackshift</groupId>
-    <artifactId>inspur-metal-plugin</artifactId>
-    <version>${rackshift.version}</version>
+    <artifactId>hp-metal-plugin</artifactId>
+    <version>${io.rackshift.version}</version>
 
     <properties>
-        <rackshift.version>1.0.0</rackshift.version>
+        <io.rackshift.version>1.0.0</io.rackshift.version>
         <spring.version>3.1.3.RELEASE</spring.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -17,14 +17,15 @@
         <dependency>
             <groupId>io.rackshift</groupId>
             <artifactId>metal-plugin-sdk</artifactId>
-            <version>${rackshift.version}</version>
+            <version>${io.rackshift.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.yaml</groupId>
-            <artifactId>snakeyaml</artifactId>
-            <version>1.19</version>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.2</version>
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
@@ -93,7 +94,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.fit2cloud.sdk.Main</mainClass>
+                            <mainClass>io.rackshift.sdk.Main</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
@@ -111,6 +112,5 @@
                 </executions>
             </plugin>
         </plugins>
-
     </build>
 </project>
