--- a/rackshift-plugin/dell-metal-plugin/src/main/resources/plugin.properties
+++ b/rackshift-plugin/dell-metal-plugin/src/main/resources/plugin.properties
@@ -1,6 +1,6 @@
 plugin.name=rackshift-dell-metal-plugin
 plugin.version=2.0
-plugin.author=FIT2CLOUD
+plugin.author=RackShift
 plugin.description=\u5FAE\u8F6Fdell-metal
 plugin.type=metal
 plugin.icon=/static/icon/dell.ico
