--- a/rackshift-web/package.json
+++ b/rackshift-web/package.json
@@ -11,6 +11,12 @@
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "element-ui": "^2.13.2",
+    "font-awesome": "^4.7.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/free-regular-svg-icons": "^5.12.0",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/vue-fontawesome": "^0.1.9",
     "sockjs": "^0.3.21",
     "sockjs-client": "^1.5.0",
     "stompjs": "^2.3.3",
