--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,8 +22,8 @@ jobs:
         java-version: 1.8
     - name: Build with Maven
       run: |
-        mvn -B package --file pom.xml
-        sudo docker login --username=${{secrets.dh_username}} --password=${{ secrets.dh_pwd }}
+#        mvn -B package --file pom.xml
+        sudo docker login --username=${{secrets.DH_USERNAME}} --password=${{ secrets.DH_PWD }}
         cd ./rackshift-server
         echo Dockerfile
 #        sudo docker build -t rackshift:rackshift:actions1 .
