--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,7 +18,7 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    - uses: actions/setup-node@v2
+    - uses: actions/setup-node@v2-beta
       with:
         node-version: '12'
         check-latest: true
