--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,7 +24,6 @@ jobs:
         check-latest: true
     - name: Build with Maven
       run: |
-        sudo docker login --username=${{secrets.DH_USERNAME}} --password=${{ secrets.DH_PWD }}
         cd ./rackshift-web
         npm install
         npm run build
@@ -34,5 +33,6 @@ jobs:
         cd ../
         mvn clean install -DskipTests
         cd ./rackshift-server
-        docker build -t rackshift/rackshift:actions .
-        docker push rackshift/rackshift:actions
+        sudo docker build -t rackshift/rackshift:actions .
+        sudo docker login --username=${{secrets.DH_USERNAME}} --password=${{ secrets.DH_PWD }}
+        sudo docker push rackshift/rackshift:actions
