--- a/rackshift-server/pom.xml
+++ b/rackshift-server/pom.xml
@@ -173,6 +173,18 @@
             <version>3.4.0</version>
             <scope>compile</scope>
         </dependency>
+
+        <!-- swagger -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.9.2</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -221,7 +233,7 @@
                 </dependencies>
             </plugin>
 
-<!--            <plugin>-->
+            <!--            <plugin>-->
             <!--                <groupId>org.apache.maven.plugins</groupId>-->
             <!--                <artifactId>maven-antrun-plugin</artifactId>-->
             <!--                <executions>-->
