--- a/rackshift-server/pom.xml
+++ b/rackshift-server/pom.xml
@@ -182,6 +182,14 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.9.2</version>
         </dependency>
+        <!-- swagger -->
+
+        <dependency>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache</artifactId>
+            <version>2.10.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
