--- a/rackshift-web/config.json
+++ b/rackshift-web/config.json
@@ -1,1 +1,10 @@
-{"global":{"$--color-primary":"#E95420","$--color-danger":"#F82C2C","$--color-success":"#55BA23","$--color-warning":"#D7932C","$--color-black":"#111111"},"local":{}}
+{
+  "global": {
+    "$--color-primary": "#E95420",
+    "$--color-danger": "#F82C2C",
+    "$--color-success": "#55BA23",
+    "$--color-warning": "#D7932C",
+    "$--color-black": "#111111"
+  },
+  "local": {}
+}
