--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,7 +51,7 @@ jobs:
             产品文档
             点击 [完整文档](https://rackshift.github.io/rackshift-docs-static/) 查看完整的安装和使用文档
             离线安装包
-            - 百度网盘下载链接: https://pan.baidu.com/s/1bUnEWsvARb8b2iN9u1cwig 提取码: jxh7
+            - 百度网盘下载链接: https://pan.baidu.com/s/136BMDzBtdf-xBWSCQFmT1A 提取码: msej
 
             # 新增功能
              - 裸金属可以批量执行开机/关机/重启/PXE操作
