--- a/rackshift-server/pom.xml
+++ b/rackshift-server/pom.xml
@@ -190,6 +190,12 @@
             <version>2.10.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.docker-java</groupId>
+            <artifactId>docker-java</artifactId>
+            <!-- use latest version https://github.com/docker-java/docker-java/releases -->
+            <version>3.2.0</version>
+        </dependency>
     </dependencies>
 
     <build>
