--- a/rackshift-server/pom.xml
+++ b/rackshift-server/pom.xml
@@ -149,6 +149,10 @@
                     <artifactId>log4j-over-slf4j</artifactId>
                     <groupId>org.slf4j</groupId>
                 </exclusion>
+                <exclusion>
+                    <artifactId>commons-io</artifactId>
+                    <groupId>commons-io</groupId>
+                </exclusion>
             </exclusions>
 
         </dependency>
