--- a/rackshift-plugin/metal-plugin-sdk/pom.xml
+++ b/rackshift-plugin/metal-plugin-sdk/pom.xml
@@ -46,9 +46,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.apache.commons</groupId>
+            <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>1.3.2</version>
+            <version>2.8.0</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
