--- a/rackshift-web/package.json
+++ b/rackshift-web/package.json
@@ -22,6 +22,7 @@
     "sockjs-client": "^1.5.0",
     "stompjs": "^2.3.3",
     "vue": "^2.6.11",
+    "vue-codemirror": "^4.0.6",
     "vue-i18n": "^8.18.2",
     "vue-router": "^3.3.4"
   },
