--- a/rackshift-web/package.json
+++ b/rackshift-web/package.json
@@ -13,7 +13,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.12.0",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/vue-fontawesome": "^0.1.9",
-    "axios": "^0.20.0",
+    "axios": ">=0.21.1",
     "core-js": "^3.6.5",
     "element-ui": "^2.13.2",
     "font-awesome": "^4.7.0",
