--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,7 +48,7 @@ jobs:
             export serverIp=您用作PXE网卡的IP地址 && curl -sSL https://github.com/rackshift/rackshift/releases/latest/download/quick_start.sh | sh
             ```
 
-            产品文档
+            # 产品文档
             点击 [完整文档](https://rackshift.github.io/rackshift-docs-static/) 查看完整的安装和使用文档
             离线安装包
             - 百度网盘下载链接: https://pan.baidu.com/s/1rQnIjt2SVY5m6b092G_sTQ 提取码: kxda
