--- a/rackshift-server/pom.xml
+++ b/rackshift-server/pom.xml
@@ -253,7 +253,26 @@
                     </dependency>
                 </dependencies>
             </plugin>
-
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>properties-replace</id>
+                        <phase>prepare-package</phase>
+                        <configuration>
+                            <target>
+                                <move file="${project.build.directory}/classes/properties/release/log.properties"
+                                      overwrite="true"
+                                      tofile="${project.build.directory}/classes/properties/log.properties"/>
+                            </target>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <!--            <plugin>-->
             <!--                <groupId>org.apache.maven.plugins</groupId>-->
             <!--                <artifactId>maven-antrun-plugin</artifactId>-->
