--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -49,6 +49,6 @@ jobs:
           cd ../
           mvn clean install -DskipTests
           cd ./rackshift-server
-          sudo docker build -t rackshift/rackshift:actions .
+          sudo docker build -t rackshift/rackshift:v1.0.1 .
           sudo docker login --username=${{secrets.DH_USERNAME}} --password=${{ secrets.DH_PWD }}
           sudo docker push rackshift/rackshift:v1.0.1
