--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,22 +49,26 @@ jobs:
             ```
 
             ## 新增功能
-             - Ubuntu 18.04 安装
-             - 批量修改 IPMI 密码
-             - 装机支持外部 repo
+            - WindowsServer 2016 安装
+            - ESXi 6.7 安装
+            - CentOS Minimal 版本安装
+            - CentOS/RHEL 多网卡 IP/ VLAN  配置
+            - CentOS 多网卡链路聚合 BOND4 802.3ad / VLAN
 
             ## 功能优化
-             - 系统日志打印
-             - 后端国际化
+            - 删除任务状态变化慢的问题
+            - 指定删除 Ubuntu 网卡的问题
 
-            ## bug 修复
-             - DHCP 服务重启故障
-             - 自定义分区单位切换故障
+            ## 问题修复
+            - 插件选择物理机页面分页问题
+            - 任务列表查询显示重复问题
+            - 插件镜像问题
+            - Ubuntu 自定义分区报错问题
 
             # 产品文档
             点击 [完整文档](https://rackshift.github.io/rackshift-docs-static/) 查看完整的安装和使用文档
             # 离线安装包
-            - 百度网盘下载链接: https://pan.baidu.com/s/1h2bmaYWgk1PnXkTVofdiwg 提取码: js7z
+            - 百度网盘下载链接: https://pan.baidu.com/s/1TA6SuxDjIPNBRmBlieOVMg 提取码: hrbr
 
       - name: Upload Release Asset
         id: upload-release-asset
