--- a/rackshift-web/package.json
+++ b/rackshift-web/package.json
@@ -24,6 +24,7 @@
     "vue": "^2.6.11",
     "vue-codemirror": "^4.0.6",
     "vue-i18n": "^8.18.2",
+    "vue-json-viewer": "^2.2.19",
     "vue-router": "^3.3.4"
   },
   "devDependencies": {
