--- a/rackshift-plugin/pom.xml
+++ b/rackshift-plugin/pom.xml
@@ -9,6 +9,14 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>io.rackshift</groupId>
+            <artifactId>metal-plugin-sdk</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
     <artifactId>rackshift-plugin</artifactId>
 
     <properties>
