--- a/rackshift-dhcp-proxy/pom.xml
+++ b/rackshift-dhcp-proxy/pom.xml
@@ -61,7 +61,11 @@
             <artifactId>gson</artifactId>
             <version>2.8.7</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.20</version>
+        </dependency
     </dependencies>
 
     <build>
