--- a/rackshift-dhcp-proxy/pom.xml
+++ b/rackshift-dhcp-proxy/pom.xml
@@ -65,7 +65,7 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.20</version>
-        </dependency
+        </dependency>
     </dependencies>
 
     <build>
