--- a/rackshift-dhcp-proxy/Dockerfile
+++ b/rackshift-dhcp-proxy/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:11
+FROM jeanblanchard/java:8
 
 COPY target/rackshift-dhcp-proxy-1.0.0-jar-with-dependencies.jar /usr/src/myapp/app.jar
 
