--- a/rackshift-server/src/main/resources/application.properties
+++ b/rackshift-server/src/main/resources/application.properties
@@ -37,3 +37,8 @@ mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 spring.servlet.multipart.enabled=false
 spring.servlet.multipart.max-file-size=10240MB
 spring.servlet.multipart.max-request-size=20480MB
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
