--- a/rackshift-server/pom.xml
+++ b/rackshift-server/pom.xml
@@ -211,8 +211,19 @@
             <groupId>org.springframework.amqp</groupId>
             <artifactId>spring-rabbit</artifactId>
             <version>2.3.10</version>
+            <exclusions>
+                <exclusion>
+                    <groupId> org.springframework.amqp</groupId>
+                    <artifactId>spring-amqp</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
+        <dependency>
+            <groupId> org.springframework.amqp</groupId>
+            <artifactId>spring-amqp</artifactId>
+            <version>2.3.10</version>
+        </dependency>
     </dependencies>
 
     <build>
