feat:多端口监听，重构部分代码

--- a/rackshift-server/src/main/resources/application.properties
+++ b/rackshift-server/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=rackshift
 server.port=8082
+server.additionalPorts=9030
 # Hikari
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.minimum-idle=5
