--- a/rackshift-server/pom.xml
+++ b/rackshift-server/pom.xml
@@ -224,6 +224,11 @@
             <artifactId>spring-amqp</artifactId>
             <version>2.3.10</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
+            <version>9.0.39</version>
+        </dependency>
     </dependencies>
 
     <build>
