--- a/rackshift-web/package.json
+++ b/rackshift-web/package.json
@@ -25,7 +25,8 @@
     "vue-codemirror": "^4.0.6",
     "vue-i18n": "^8.18.2",
     "vue-json-viewer": "^2.2.19",
-    "vue-router": "^3.3.4"
+    "vue-router": "^3.3.4",
+    "vue-workflow-chart": "^0.4.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
