feat:重写装机引擎

--- a/rackshift-dhcp-proxy/pom.xml
+++ b/rackshift-dhcp-proxy/pom.xml
@@ -66,6 +66,11 @@
             <artifactId>lombok</artifactId>
             <version>1.18.20</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.26</version>
+        </dependency>
     </dependencies>
 
     <build>
