--- a/rackshift-web/package.json
+++ b/rackshift-web/package.json
@@ -18,6 +18,7 @@
     "element-ui": "^2.13.2",
     "font-awesome": "^4.7.0",
     "get-ip-range": "^3.0.0",
+    "portfinder": "^1.0.21",
     "sockjs": "^0.3.21",
     "sockjs-client": "^1.5.0",
     "stompjs": "^2.3.3",
