feat:1.6 release.yml

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -77,5 +77,4 @@ jobs:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
           asset_path: ./${{ steps.create_release_file.outputs.FILENAME }}/installer/quick_start.sh
           asset_name: quick_start.sh
-          asset_content_type: application/text
-`
+          asset_content_type: application/text`
