fix:服务器端口号自定义

--- a/rackshift-server/src/main/resources/application.properties
+++ b/rackshift-server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=rackshift
-server.port=8082
+server.port=${web.server.port}
 # Hikari
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.minimum-idle=5
